# ichat

./: .gitignore  Cargo.toml  todos.md
client/: Cargo.toml
client/migration/: Cargo.toml
client/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20260411_091225_alter_message.rs
client/src/: lib.rs  main.rs
client/src/entity/: accounts.rs  groups.rs  messages.rs  mod.rs  prelude.rs
client/src/tools/: auth.rs  group.rs  mod.rs  textchat.rs  update_info.rs
client/src/ui/: chat.rs  login.rs  mod.rs
client/src/ui/chat/: chat_util.rs  mod.rs
server/: Cargo.toml
server/migration/: Cargo.toml
server/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20260402_080713_create_auths.rs  m20260403_114824_create_group_msg.rs  m20260411_040444_alter_account_group.rs
server/src/: auth.rs  axum.rs  group.rs  lib.rs  login.rs  main.rs  message.rs  register.rs  textchat.rs  update_info.rs
server/src/entity/: account_group.rs  accounts.rs  auths.rs  groups.rs  messages.rs  mod.rs  prelude.rs
shared/: Cargo.toml
shared/src/: account.rs  auth.rs  group.rs  lib.rs  login.rs  message.rs  register.rs  update_info.rs
