[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytes = "1.11.1"
dotenv = "0.15.0"
rustls = "0.23.37"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tokio-rustls = "0.26.4"
webpki-roots = "1.0.6"

shared = { path = "../shared" }
rkyv = "0.8.15"
