[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
client_migration = {path = "migration"}

anyhow = "1.0.102"
bytes = "1.11.1"
dotenv = "0.15.0"
rustls = "0.23.37"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tokio-rustls = "0.26.4"
webpki-roots = "1.0.6"
reqwest = { version = "0.13.2", features = ["json"] }
sea-orm = { version = "2.0.0-rc", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sha2 = "0.11.0"
hex = "0.4.3"
uuid = "1.23.0"
iced = { version = "0.14.0", features = ["tokio"] }
