[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
migration = {path = "migration"}

anyhow = "1.0.102"
bytes = "1.11.1"
dotenv = "0.15.0"
rustls = "0.23.37"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tokio-rustls = "0.26.4"
axum = { version = "0.8.8", features = ["json", "macros"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
sea-orm = { version = "2.0.0-rc", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
uuid = { version = "1.23.0", features = ["v4", "v7"] }
chrono = "0.4.44"
sha2 = "0.11.0"
async-broadcast = "0.7.2"

[dev-dependencies]
tokio = { version = "1.50.0", features = ["test-util"] }
